# sparkling-osm-router

./: .gitignore  README.md  index.node  package.json  tsconfig.json
rs/: Cargo.toml
rs/src/: errors.rs  graph.rs  indexer.rs  lib.rs  offset.rs  parser.rs  routing.rs  search.rs  simplify.rs  utils.rs
rs/src/core/: errors.rs  types.rs
rs/src/graph/: mod.rs
rs/src/parser/: mod.rs
rs/src/processing/: mod.rs
rs/src/queue/: mod.rs
rs/src/routing/: algorithm.rs  mod.rs
rs/src/spatial/: geometry.rs  indexer.rs  mod.rs  offset.rs  precomputation.rs  search.rs  simplify.rs
src/: RustModules.ts  index.ts  typings.d.ts  typings.ts
src/Graph/: Profile.ts  RouteQueue.ts  index.ts  loadOSMGraph.ts
src/modules/: Graph.ts  Profile.ts  RouteQueue.ts
src/tools/: offsetShape.ts  simplifyShape.ts
