[package]
name = "sparkling-osm-router"
version = "0.1.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = "1.0"
xml-rs = "0.8"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
rstar = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
tokio = { version = "1.35", features = ["full", "sync"] }
rayon = "1.8"
num_cpus = "1.16"
async-trait = "0.1"
futures = "0.3"
rustc-hash = "2.1.1"
lru = "0.13"
uuid = { version = "1.8", features = ["v4"] }