[package]
name = "sparkling-osm-router"
version = "2.0.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
lazy_static = "1.4"
log = "0.4"
uuid = { version = "1.8", features = ["v4"] }
tokio = { version = "1.35", features = ["full", "sync"] }
rayon = "1.8"
num_cpus = "1.16"
rstar = "0.12"
rustc-hash = "2.1.1"
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
xml-rs = "0.8"
osmpbf = "0.3"
bytes = "1"